<resources>
    <string name="app_name">Tracker Covid</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">LOGIN</string>
    <string name="welcome_back">Welcome Back!!</string>
    <string name="no_account_help">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="register_your_account">Register Your Account</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="logo">Logo</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="critical">Critical</string>
    <string name="active">Active</string>
    <string name="see_more">See More</string>
    <string name="summary">Summary</string>
    <string name="countries">Countries</string>
    <string name="menu">Menu</string>
</resources>